--- a/src/main/resources/templates/addPet.html
+++ b/src/main/resources/templates/addPet.html
@@ -13,17 +13,17 @@
 
     <form th:action="@{/savePets}" method="post">
         <label for="nombre">Nombre:</label>
-        <input type="text" id="nombre" name="nombre" required/><br/>
+        <input type="text" id="nombre" name="nombre" /><br/>
 
         <label for="especie">Especie:</label>
-        <input type="text" id="especie" name="especie" required/><br/>
+        <input type="text" id="especie" name="especie" /><br/>
 
         <label for="edad">Edad:</label>
-        <input type="number" id="edad" name="edad" required/><br/>
+        <input type="number" id="edad" name="edad" /><br/>
 
         <!-- Lista desplegable para seleccionar el dueño -->
         <label for="owner">Dueño:</label>
-        <select id="owner" name="idOwner" required>
+        <select id="owner" name="idOwner" >
             <option th:each="owner : ${owner}" th:value="${owner.id}" th:text="${owner.nombre}"></option>
         </select><br/>
 
